Services and Pricing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,71 +9,180 @@
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/1e58773f97.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <section id="about-me">
         <nav>
-        <div class="personal__logo">New View Realty Group</div>
-        <ul class="nav__link--list">
-            <li>
-                <a href="" class="
+            <div class="personal__logo">New View Realty Group</div>
+            <ul class="nav__link--list">
+                <li>
+                    <a href="" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
             ">Services</a>
-            </li>
-            <li>
-                <a href="" class="
+                </li>
+                <li>
+                    <a href="" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
             ">Pricing</a>
-            </li>
-            <li>
-                <a href="" class="
+                </li>
+                <li>
+                    <a href="" class="
                 nav__link--anchor
                 nav__link--anchor-primary
             ">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    <div class="flex flex-1">
-      <div class="about-me__info row">
-        <div class="about-me__info--container">
-            <figure class="about-me__picture--mask">
-                <img src="./assets/newview.png" class= "about-me__picture" alt="New View Logo">
-            </figure>
-            <h1 class="about-me__info--title">
-                Preventative Maintenance Inspection <span class="text--purple">Pricing</span>
-            </h1>
-            <p class="about-me__info--para">
+                </li>
+            </ul>
+        </nav>
+        <div class="flex flex-1">
+            <div class="about-me__info row">
+                <div class="about-me__info--container">
+                    <figure class="about-me__picture--mask">
+                        <img src="./assets/newview.png" class="about-me__picture" alt="New View Logo">
+                    </figure>
+                    <h1 class="about-me__info--title">
+                        Preventative Maintenance <span class="text--purple">Inspection</span>
+                    </h1>
+                    <p class="about-me__info--para">
 
-            </p>
-            <div class="about-me__links">
-                <a href="" class="about-me__link">
-                    <i class="fa-solid fa-envelope"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-facebook-f"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-x-twitter"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-youtube"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                </a>
+                    </p>
+                    <div class="about-me__links">
+                        <a href="" class="about-me__link">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                </div>
+                <figure class="about-me__img--container">
+                    <img src="./assets/undraw_maintenance_re_59vn.svg" class="about-me__img" alt="">
+                </figure>
             </div>
         </div>
-        <figure class="about-me__img--container">
-            <img src="./assets/undraw_maintenance_re_59vn.svg" class="about-me__img" alt="">
-        </figure>
-      </div>
-    </div>
-   </section>
+    </section>
+    <section id="languages">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Our <span class="text--purple">Services</span></h1>
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="" alt="" class="language__img">
+                            <p class="language__img">HVAC Yearly Maintenance Inspection $69 ($120 for yearly contract
+                                twice per year)</p>
+                        </figure>
+                        <span class="language__name">Check freon pressure</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="" alt="" class="language__img">
+                            <p class="language__img">Extra (if applicable)</p>
+                        </figure>
+                        <span class="language__name"></span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="" alt="" class="language__img">
+                            <p class="language__img">Additional Services</p>
+                        </figure>
+                        <span class="language__name"></span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="" alt="" class="language__img">
+                            <p class="language__img">HVAC Yearly Maintenance Inspection $69 ($120 for yearly contract
+                                twice per year)</p>
+                        </figure>
+                        <span class="language__name"></span>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Our <span class="text--purple">Pricing</span></h1>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/livingroom1.jpg" class="project__img" alt="Basic Pricing">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Basic</h3>
+                                <h4 class="project__description--sub-title">
+                                    $120 or As Low as $11 Per Month, Yearly Inspection (1)
+                                </h4>
+                                <p class="project__description--para">
+                                    • One inspection p/year (yearly)
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://newviewrealtygroup.com" target="_blank"
+                                        class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/livingroom1.jpg" class="project__img" alt="Basic Pricing">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Basic</h3>
+                                <h4 class="project__description--sub-title">
+                                    $120 or As Low as $11 Per Month, Yearly Inspection (1)
+                                </h4>
+                                <p class="project__description--para">
+                                    • One inspection p/year (yearly)
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://newviewrealtygroup.com" target="_blank"
+                                        class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/livingroom1.jpg" class="project__img" alt="Basic Pricing">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Basic</h3>
+                                <h4 class="project__description--sub-title">
+                                    $120 or As Low as $11 Per Month, Yearly Inspection (1)
+                                </h4>
+                                <p class="project__description--para">
+                                    • One inspection p/year (yearly)
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://newviewrealtygroup.com" target="_blank"
+                                        class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
