--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <div class="personal__logo">New View Realty Group</div>
             <ul class="nav__link--list">
                 <li>
-                    <a href="" class="
+                    <a href="#languages" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
             ">Services</a>
                 </li>
                 <li>
-                    <a href="" class="
+                    <a href="#projects" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
             ">Pricing</a>
                 </li>
                 <li>
-                    <a href="" class="
+                    <a href="mailto:Repairs@newviewrg.com" target="_blank" class="
                 nav__link--anchor
                 nav__link--anchor-primary
             ">Contact</a>
@@ -50,22 +50,22 @@
 
                     </p>
                     <div class="about-me__links">
-                        <a href="" class="about-me__link">
+                        <a href="mailto:Repairs@newviewrg.com" target="_blank" class="about-me__link">
                             <i class="fa-solid fa-envelope"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="https://www.facebook.com/newviewrealtygroup/?ref=hl" target="_blank" class="about-me__link">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="https://twitter.com/NewViewRealty" target="_blank" class="about-me__link">
                             <i class="fa-brands fa-x-twitter"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="https://www.instagram.com/newviewrealtygroup/?igshid=o1nxfg3j3q0d" target="_blank" class="about-me__link">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="https://www.youtube.com/channel/UC7ALl0NaaZOi38hfx10D_Zw" target="_blank" class="about-me__link">
                             <i class="fa-brands fa-youtube"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="https://www.linkedin.com/company/new-view-realty-group?report%2Esuccess=KJ_KkFGTDCfMt-A7wV3Fn9Yvgwr02Kd6AZHGx4bQCDiP6-2rfP2oxyVoEQiPrcAQ7Bf" target="_blank" class="about-me__link">
                             <i class="fa-brands fa-linkedin-in"></i>
                         </a>
                     </div>
@@ -76,6 +76,8 @@
             </div>
         </div>
     </section>
+
+
     <section id="languages">
         <div class="container">
             <div class="row">
@@ -114,6 +116,8 @@
                 </div>
             </div>
     </section>
+
+
     <section id="projects">
         <div class="container">
             <div class="row">
@@ -183,6 +187,41 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="row footer__row">
+            <a href="#" class="footer__anchor">
+                <figure class="footer__logo">
+                    <img src="./assets/newview.png" class="footer__logo--img" alt="">
+                </figure>
+                <span class="footer__logo--popper">
+                    Top
+                    <i class="fas fa-arrow-up"></i>
+                </span>
+            </a>
+            <div class="footer__social--list">
+                <a href="https://newviewrealtygroup.com" target="_blank" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white
+                " target="_blank">New View</a>
+
+                <a href="mailto:Repairs@newviewrg.com
+                " target="_blank" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white
+                " target="_blank">Email</a>
+
+                <a href="https://www.linkedin.com/company/new-view-realty-group?report%2Esuccess=KJ_KkFGTDCfMt-A7wV3Fn9Yvgwr02Kd6AZHGx4bQCDiP6-2rfP2oxyVoEQiPrcAQ7Bf" target="_blank" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white
+                " target="_blank">LinkedIn</a>
+            </div>
+            <div class="footer__copyright">2023 New View Realty Group.</div>
+        </div>
+    </footer>
 </body>
 
 </html>
